[package]
name = "bevy_generative"
version = "0.1.0"
license = "MIT"
edition = "2021"
default-run = "bevy_generative"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "noise_map"
path = "src/bin/noise_map.rs"

[dependencies]
bevy = "0.12.1"
bevy_egui = "0.24.0"
bevy_panorbit_camera = { version = "0.9.2", features = ["bevy_egui"] }
colorgrad = "0.6.2"
gltf = "1.3.0"
image = "0.24.7"
noise = { git = "https://github.com/Razaekel/noise-rs.git" }
rfd = "0.12.1"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
