[package]
name = "bevy_generative"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Procedural generation in Bevy"
categories = ["game-development", "graphics", "rendering", "visualization"]
keywords = ["bevy", "gamedev", "procedural", "generation", "graphics"]
readme = "README.md"
repository = "https://github.com/manankarnik/bevy_generative"
homepage = "https://github.com/manankarnik/bevy_generative"
documentation = "https://docs.rs/bevy_generative"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.12.1"
colorgrad = "0.6.2"
gltf = "1.3.0"
image = "0.24.7"
noise = { git = "https://github.com/Razaekel/noise-rs.git" }
rfd = "0.12.1"
wasm-bindgen = "0.2.89"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

