[package]
name = "bevy_generative"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Procedural generation in Bevy"
categories = ["game-development", "graphics", "rendering", "visualization"]
keywords = ["bevy", "gamedev", "procedural", "generation", "graphics"]
exclude = [".github/**/*"]
readme = "README.md"
repository = "https://github.com/manankarnik/bevy_generative"
homepage = "https://github.com/manankarnik/bevy_generative"
documentation = "https://docs.rs/bevy_generative"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_ui",
] }
colorgrad = "0.6.2"
gltf = "1.3.0"
image = "0.25"
noise = { version = "0.9.0", git = "https://github.com/Razaekel/noise-rs.git" }
rfd = "0.12.1"
serde = "1.0.195"
serde_json = "1.0.111"
wasm-bindgen = "0.2.89"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
